example/lib/src/arbs/errors/app_si.arb
{
  "@@locale": "si",
  "@@author": "example@gmail.com",
  "@@last_modified": "2026-07-14T13:18:25.440497Z",
  "@@comment": "Generated from Google Sheets",
  "error": "දෝෂයක් සිදු විය",
  "@error": {
    "description": "Ошибка"
  },
  "unexpectedError": "අනපේක්ෂිත දෝෂයක් සිදුවිය",
  "@unexpectedError": {
    "description": "Произошла какая то ошибка"
  },
  "bugReportSentText": "බග් වාර්තාව සාර්ථකව යවා ඇත.",
  "@bugReportSentText": {
    "description": "Сообщение об успешной отправке баг репорта"
  }
}